--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 main {
   text-align: center;
   vertical-align: center;
-  font-family: "Roboto", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .articleContainer {
+  background-color: #f7f7f7;
   position: relative;
   padding: 15px 32px;
   margin: 15px;
@@ -12,18 +13,23 @@ main {
   border-radius: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: left;
-  z-index: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .topGroup {
+  width: 100%;
   display: flex;
   position: relative;
-  flex: 1;
-  justify-items: space-between;
+  justify-content: space-between;
+}
+
+.topGroup h3 {
+  width: 95%;
 }
 
 .buttonGroup {
-  background-color: #ff6600;
+  background-color: #666;
   position: relative;
   border: none;
   color: white;
@@ -34,11 +40,9 @@ main {
   font-size: 16px;
   cursor: pointer;
   border-radius: 15px;
-  right: 32px;
-  z-index: 2;
 }
 
 .buttonGroup:hover {
-  background-color: #ff9933;
+  background-color: #333;
 }
 
